# snips-nlu-rs

./: Cargo.toml
