[package]
name = "snips-nlu-lib"
version = "0.65.6"
authors = [
    "Adrien Ball <adrien.ball@snips.ai>",
    "Clement Doumouro <clement.doumouro@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai>"
]
repository = "https://github.com/snipsco/snips-nlu-rs"
description = "Rust implementation of Snips NLU"
edition = "2018"

[workspace]
members = [
    "ffi",
    "platforms/python/ffi",
]

[dependencies]
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
itertools = "0.12"
lazy_static = "1.4"
rmp-serde = "1.1.2"  # Updated from 0.13
snips-nlu-ontology = { git = "https://github.com/substr2837/snips-nlu-ontology", branch = "update_deps" }
snips-nlu-parsers = { git = "https://github.com/substr2837/snips-nlu-parsers", branch = "update_deps" }
snips-nlu-utils = { git = "https://github.com/substr2837/snips-nlu-utils", branch = "update_deps" }

crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", tag = "0.3.3" }
base64 = "0.10"
log = "0.4"
lru-cache = "0.1"
ndarray = "0.12"
regex = "1.0"
csv = "1.0"
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
clap = "2.32"
dinghy-test = "0.4"
env_logger = "0.6"
maplit = "1.0"
fs_extra = "1.1"

[[bench]]
name = "nlu_engine"
harness = false
